--- a/exemplo.tex
+++ b/exemplo.tex
@@ -121,7 +121,7 @@ potência em processadores \textit{single-core}, que fez com que não seja mais po
 aumentar a potência de um processador individualmente \cite{patterson2012computer}.
 
 Dentre os algoritmos paralelos desenvolvidos e estudados encontram-se algoritmos para a solução 
-do problema de satisfazibilidade booleana (SAT). O problema da satisfazibilidade booleana(SAT)\cite{Biere} 
+do problema de \textit{satisfazibilidade booleana} (SAT). O problema SAT\cite{Biere} 
 consiste em determinar, para uma dada fórmula booleana, se existe uma atribuição de valores 
 para as variáveis para a qual a fórmula é satisfeita. SAT é um problema NP-Completo, logo sua 
 resolução por si só é um dos maiores problemas da computação. Porém o SAT tem aplicações diretas 
